# ros_quat_ds

./: CMakeLists.txt  PBC_DS_lpvds.py  PBC_DS_ori.py  README.md  lpv_ds.py  lpv_ds_pos.py  lpvds_ori.py  lpvds_pos.py  main.py  move_to_pose.py  output.json  output_ori.json  package.xml  requirements.txt  robot_sim.py  setup.py
configs/follow_traj/: config.yaml  franka.yaml  ik_setup_config.yaml
configs/interpolation/: config.yaml  franka.yaml  kuka_lwr.yaml  traj.yaml  traj_lwr.yaml
configs/interpolation_pybullet/: config.yaml  franka.yaml  ik_setup_config.yaml  traj_lwr.yaml
configs/run_franka/: config.yaml  franka.yaml
configs/visualize_franka/: config.yaml  franka.yaml
launch/: follow_traj.launch  interpolation.launch  interpolation_pybullet.launch  run_franka.launch  run_franka_eff_state.launch  run_franka_joint_state.launch  visualize_franka.launch
models/ball/: ball.urdf
models/franka_panda/: panda.urdf
scripts/: run_follow_traj.py  run_franka_eff_state.py  run_franka_joint_state.py  run_interpolation.py  run_interpolation_pybullet.py  traj_setup_node.py
src/: panda.py  panda_ball.py  panda_gripper.py  panda_noball.py
src/follow_traj/: utils.py
src/interpolation/: p_in.npy  q_in.npy  utils.py
util/: gmm.py  gmm_coupled.py  plot_tools.py  quat_tools.py
