<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_quat_ds</name>
  <version>0.0.1</version>
  <description>The ros_quat_ds package</description>
  <maintainer email="sunan@seas.upenn.edu">Sunan Sun</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/SunannnSun/ros_quat_ds</url>
  <author email="sunan@seas.upenn.edu">Sunan Sun</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>cob_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_pybullet_interface</depend>

</package>
